# snf-bot-eu

./: .gitignore  README.md  buildDev.bat  build_pi.bat  build_release.bat  index.html
sfBot/: .gitignore  (+4 more)
sfBot/src-tauri/: .gitignore  Cargo.toml  build.bat  build.rs  buildDev.bat  charsToFight.json  charstoFightAcc.json  checkup.pyw  placeholder.rs  rustfmt.toml  tauri.conf.json  update.sh
sfBot/src-tauri/.cargo/: config.toml
sfBot/src-tauri/sf-api/: .gitignore  Cargo.toml  build.rs
sfBot/src-tauri/sf-api/benches/: battle_benchmark.rs
sfBot/src-tauri/sf-api/examples/: cached_testing.rs  decrypt_url.rs  dungeons.rs  expedition.rs  gamble.rs  questing.rs
sfBot/src-tauri/sf-api/src/: command.rs  error.rs  lib.rs  misc.rs  response.rs  session.rs  sso.rs
sfBot/src-tauri/sf-api/src/gamestate/: arena.rs  character.rs  dungeons.rs  fortress.rs  guild.rs  idle.rs  items.rs  legendary_dungeon.rs  mod.rs  rewards.rs  social.rs  tavern.rs  underworld.rs  unlockables.rs
sfBot/src-tauri/sf-api/tests/: battle_simulation.rs
sfBot/src-tauri/src/: arena.rs  arena_manager.rs  bot_runner.rs  character_cache.rs  city_guard.rs  collect_daily_weekly_reward.rs  daily_task_management.rs  dungeon_management.rs  equipment_swapping.rs  expedition_utils.rs  expeditions_exp.rs  expeditions_gold.rs  fortress.rs  gem_stats.rs  guild.rs  hellevator_management.rs  helperUtils.rs  inventory_management.rs  lib.rs  lottery.rs  main.rs  paths.rs  pet_management.rs  process_ingame_mails.rs  quarter.rs  scrapbook_filler.rs  skill_point_list.rs  stable.rs  stat_point_management.rs  toilet_management.rs  underword_management.rs  unlockables.rs  updater.rs  utils.rs  webshop.rs  witch_enchantment.rs
sfBot/src-tauri/src/api/: mod.rs
(+18 files in other folders)
