[package]
name = "sfbot"
version = "1.0.2"
description = "SF Bot HTTP API Server"
authors = ["you"]
edition = "2021"

[lib]
name = "sfbot_lib"
crate-type = ["rlib"]

[[bin]]
name = "sfbot"
path = "src/main.rs"

[dependencies]
# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async Runtime
tokio = { version = "1.44", features = ["full", "sync", "time", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SF API
sf-api = { path = "sf-api" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.10.0"
fastrand = "2"
uuid = { version = "1.13.1", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client (for external API calls)
reqwest = { version = "0.12.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Crypto/Hashing
sha1 = "0.10.6"
sha2 = "0.10.8"

# System info
whoami = "1.4"

# Other
semver = "1.0.25"
rust-ini = "0.21"
enum-map = "2.7.3"
num-bigint = "0.4.6"
strum = { version = "0.27", features = ["strum_macros", "derive"] }
anyhow = "1.0.95"
rand = "0.7.3"

# Embed frontend files into binary
rust-embed = "8"
mime_guess = "2"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winuser"] }
tray-icon = "0.14"
open = "5"

[profile.dev]
panic = "abort"
codegen-units = 50
lto = false
opt-level = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 1
